--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '11.0'
 
 target 'VoiceConverter_Example' do
-  pod 'VoiceConverter', :path => '../'
+  pod 'VoiceConverter2', :path => '../'
 
   target 'VoiceConverter_Tests' do
     inherit! :search_paths
