1、解决音频转换库，在Swift项目中转换失败的问题； 2、重新命名依赖库；

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,7 +1,7 @@
 platform :ios, '11.0'
 
 target 'VoiceConverter_Example' do
-  pod 'VoiceConverter2', :path => '../'
+  pod 'WAConverter', :path => '../'
 
   target 'VoiceConverter_Tests' do
     inherit! :search_paths
